--- a/src/examples/index/index.html
+++ b/src/examples/index/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>联系人详情</title>
+  <title>examples</title>
   <link rel="stylesheet" type="text/css" href="../static/css/iconfont.css">
   <link id="themeslink" rel="stylesheet" href="../static/themes/red/css/iuapmobile.um.css"/>
 </head>
